[package]
name = "small-collections"
version = "0.1.0"
edition = "2024"
description = "High-performance Map and Set that live on the stack and spill to the heap."
license = "MIT"

[dependencies]
bitvec = "1.0.1"
# Fast hashing (consistent between stack and heap states)
fnv = "1.0.7"
# Heap storage backend
hashbrown = "0.16.1"
# Stack storage backend
heapless = "0.9.2"
# Ordered map for heap storage
ordermap = "1.1.0"
# LRU cache for heap storage
lru = "0.12.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "collections_bench"
harness = false
