[package]
name = "small-collections"
version = "0.5.0"
edition = "2024"
description = "High-performance Map and Set that live on the stack and spill to the heap."
license = "MIT"
repository = "https://github.com/dilipvamsi/small-collections"
documentation = "https://docs.rs/small-collections"
readme = "README.md"
keywords = ["stack", "small-object-optimization", "no_std", "collections", "lru"]
categories = ["data-structures", "no-std", "memory-management"]

[dependencies]
# Fast hashing (consistent between stack and heap states)
fnv = "1.0.7"
# Heap storage backend
hashbrown = "0.16.1"
# Stack storage backend
heapless = "0.9.2"

# Optional dependencies
bitvec = { version = "1.0.1", optional = true }
ordermap = { version = "1.1.0", optional = true }
lru = { version = "0.12.5", optional = true }

[features]
default = ["full"]
full = ["lru", "bitvec", "ordered"]

lru = ["dep:lru"]
bitvec = ["dep:bitvec"]
ordered = ["dep:ordermap"]


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "vec"
harness = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "string"
harness = false

[[bench]]
name = "deque"
harness = false

[[bench]]
name = "bitvec"
harness = false
required-features = ["bitvec"]

[[bench]]
name = "heap"
harness = false

[[bench]]
name = "cache"
harness = false
required-features = ["lru"]

[[bench]]
name = "heapless_cache"
harness = false
required-features = ["lru"]

[[bench]]
name = "heapless_btree"
harness = false

[[bench]]
name = "heapless_bitvec"
harness = false
required-features = ["bitvec"]

[[bench]]
name = "heapless_ordered_map"
harness = false
required-features = ["ordered"]

[[bench]]
name = "heapless_linear_cache"
harness = false
required-features = ["lru"]

